force-app/main/default/objects/HomologationForm__c/fields/NotInterestedInOfferingDiscount__c.field-meta.xml
<CustomField>
    <fullName>NotInterestedInOfferingDiscount__c</fullName>
    <label>I&apos;m not interested in offering discount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <label>I&apos;m not interested in offering discounts</label>
            </value>
            <value>
                <fullName>No</fullName>
                <label>I want to offer discounts</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>