force-app/main/default/objects/HomologationForm__c/fields/NumberOfDays__c.field-meta.xml
<CustomField>
    <fullName>NumberOfDays__c</fullName>
    <defaultValue>2</defaultValue>
    <inlineHelpText>Padrão e mínimo, 2 dias</inlineHelpText>
    <label>Number of days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>