force-app/main/default/objects/HomologationForm__c/fields/OneClickBuyingTokenization__c.field-meta.xml
<CustomField>
    <fullName>OneClickBuyingTokenization__c</fullName>
    <label>One-Click Buying / Tokenization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_and_No</valueSetName>
    </valueSet>
</CustomField>