force-app/main/default/objects/HomologationForm__c/fields/PagBrasil_Mobile_POS_Fixed__c.field-meta.xml
<CustomField>
    <fullName>PagBrasil_Mobile_POS_Fixed__c</fullName>
    <label>PagBrasil Mobile POS (Fixed)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>