force-app/main/default/objects/HomologationForm__c/fields/PagBrasil_Mobile_POS_Variable__c.field-meta.xml
<CustomField>
    <fullName>PagBrasil_Mobile_POS_Variable__c</fullName>
    <label>PagBrasil Mobile POS (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>