force-app/main/default/objects/HomologationForm__c/fields/PagBrasilPix__c.field-meta.xml
<CustomField>
    <fullName>PagBrasilPix__c</fullName>
    <label>PagBrasil Pix</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>