force-app/main/default/objects/HomologationForm__c/fields/PagBrasilSolutionForTransferringFee__c.field-meta.xml
<CustomField>
    <fullName>PagBrasilSolutionForTransferringFee__c</fullName>
    <label>Solução PagBrasil para Transferir taxa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>