force-app/main/default/objects/HomologationForm__c/fields/PagShield__c.field-meta.xml
<CustomField>
    <fullName>PagShield__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PagShield</label>
    <type>Checkbox</type>
</CustomField>