force-app/main/default/objects/HomologationForm__c/fields/PagShield_Premium__c.field-meta.xml
<CustomField>
    <fullName>PagShield_Premium__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PagShield Premium</label>
    <type>Checkbox</type>
</CustomField>