force-app/main/default/objects/HomologationForm__c/fields/PagStream__c.field-meta.xml
<CustomField>
    <fullName>PagStream__c</fullName>
    <label>PagStream</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>