force-app/main/default/objects/HomologationForm__c/fields/PaymentAlert__c.field-meta.xml
<CustomField>
    <fullName>PaymentAlert__c</fullName>
    <label>Payment Alert</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pix</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Flash Debit</fullName>
            </value>
            <value>
                <fullName>Flash Bank Slip</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>