force-app/main/default/objects/HomologationForm__c/fields/PaymentConfirmationEmailService__c.field-meta.xml
<CustomField>
    <fullName>PaymentConfirmationEmailService__c</fullName>
    <label>Payment Confirmation Email Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_and_No</valueSetName>
    </valueSet>
</CustomField>