force-app/main/default/objects/HomologationForm__c/fields/PaymentLinkEmailService__c.field-meta.xml
<CustomField>
    <fullName>PaymentLinkEmailService__c</fullName>
    <label>Payment Link Email Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_and_No</valueSetName>
    </valueSet>
</CustomField>