force-app/main/default/objects/HomologationForm__c/fields/PbCheckoutDiscount__c.field-meta.xml
<CustomField>
    <fullName>PbCheckoutDiscount__c</fullName>
    <label>PB Checkout Discount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>