force-app/main/default/objects/HomologationForm__c/fields/Pix_Open_Finance__c.field-meta.xml
<CustomField>
    <fullName>Pix_Open_Finance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pix Open Finance</label>
    <type>Checkbox</type>
</CustomField>