force-app/main/default/objects/HomologationForm__c/fields/Pix_Pending__c.field-meta.xml
<CustomField>
    <fullName>Pix_Pending__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pix Pending</label>
    <type>Checkbox</type>
</CustomField>