force-app/main/default/objects/HomologationForm__c/fields/Pix_Valid_For__c.field-meta.xml
<CustomField>
    <fullName>Pix_Valid_For__c</fullName>
    <label>Pix Valid For</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5min</fullName>
            </value>
            <value>
                <fullName>30min</fullName>
            </value>
            <value>
                <fullName>120min</fullName>
            </value>
            <value>
                <fullName>7200min (5 dias)</fullName>
            </value>
            <value>
                <fullName>Outro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>