force-app/main/default/objects/HomologationForm__c/fields/PixEmailService__c.field-meta.xml
<CustomField>
    <fullName>PixEmailService__c</fullName>
    <label>Pix Email Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Pix Confirmation</fullName>
            </value>
            <value>
                <fullName>Pix Reminder</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>