force-app/main/default/objects/HomologationForm__c/fields/POD_Routine_for_Shopify_Merchant__c.field-meta.xml
<CustomField>
    <fullName>POD_Routine_for_Shopify_Merchant__c</fullName>
    <label>POD Routine for Shopify Merchant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Shopify</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>