force-app/main/default/objects/HomologationForm__c/fields/PodReminder__c.field-meta.xml
<CustomField>
    <fullName>PodReminder__c</fullName>
    <label>POD Reminder</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activated</fullName>
            </value>
            <value>
                <fullName>Deactivated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>