force-app/main/default/objects/HomologationForm__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <formula>IF(
  ISPICKVAL(Opportunity__r.Product_Type__c, &quot;Physical&quot;),
  &quot;Physical products, please fill in the field below&quot;,
  IF(
    ISPICKVAL(Opportunity__r.Product_Type__c, &quot;Digital&quot;),
    &quot;Not a physical product, please disregard the field below&quot;,
    &quot;&quot;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Type</label>
    <type>Text</type>
</CustomField>