force-app/main/default/objects/HomologationForm__c/fields/Produtos_Importados__c.field-meta.xml
<CustomField>
    <fullName>Produtos_Importados__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Produtos Importados?</label>
    <type>Checkbox</type>
</CustomField>