force-app/main/default/objects/HomologationForm__c/fields/Pv__c.field-meta.xml
<CustomField>
    <fullName>Pv__c</fullName>
    <label>PV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>