force-app/main/default/objects/HomologationForm__c/fields/RegKey__c.field-meta.xml
<CustomField>
    <fullName>RegKey__c</fullName>
    <label>RegKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>