force-app/main/default/objects/HomologationForm__c/fields/ReimbursementPolicy__c.field-meta.xml
<CustomField>
    <fullName>ReimbursementPolicy__c</fullName>
    <label>Reimbursement Policy</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>