force-app/main/default/objects/HomologationForm__c/fields/Remittance_Agent__c.field-meta.xml
<CustomField>
    <fullName>Remittance_Agent__c</fullName>
    <label>Remittance Agent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PagBrasil</fullName>
            </value>
            <value>
                <fullName>PagSmart</fullName>
            </value>
            <value>
                <fullName>Blue Stream</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>