force-app/main/default/objects/HomologationForm__c/fields/Remittance_Tax__c.field-meta.xml
<CustomField>
    <fullName>Remittance_Tax__c</fullName>
    <label>Remittance Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>