force-app/main/default/objects/HomologationForm__c/fields/Remittance_Type__c.field-meta.xml
<CustomField>
    <fullName>Remittance_Type__c</fullName>
    <label>Remittance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Via Agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>