force-app/main/default/objects/HomologationForm__c/fields/Require_Address_Check__c.field-meta.xml
<CustomField>
    <fullName>Require_Address_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Make sure all email address fields are mandatory. PagBrasil offers a free ZIP code validator (except for Magento). Please check the box below if you want this tool enabled.</description>
    <inlineHelpText>Make sure all email address fields are mandatory. PagBrasil offers a free ZIP code validator (except for Magento). Please check the box below if you want this tool enabled.</inlineHelpText>
    <label>Require Address Check</label>
    <type>Checkbox</type>
</CustomField>