force-app/main/default/objects/HomologationForm__c/fields/Required_Fields__c.field-meta.xml
<CustomField>
    <fullName>Required_Fields__c</fullName>
    <label>Required Fields</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>