force-app/main/default/objects/HomologationForm__c/fields/RequirementResponseTime__c.field-meta.xml
<CustomField>
    <fullName>RequirementResponseTime__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exigência Tempo de Resposta</label>
    <type>Checkbox</type>
</CustomField>