force-app/main/default/objects/HomologationForm__c/fields/RequirementZipCodeValidator__c.field-meta.xml
<CustomField>
    <fullName>RequirementZipCodeValidator__c</fullName>
    <label>Address Check &amp; ZIP Code Validation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>