force-app/main/default/objects/HomologationForm__c/fields/ReviewPayeeRegistration__c.field-meta.xml
<CustomField>
    <fullName>ReviewPayeeRegistration__c</fullName>
    <label>Review Payee Registration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_and_No</valueSetName>
    </valueSet>
</CustomField>