force-app/main/default/objects/HomologationForm__c/fields/SalesProcess__c.field-meta.xml
<CustomField>
    <fullName>SalesProcess__c</fullName>
    <label>Sales Process</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>