force-app/main/default/objects/HomologationForm__c/fields/ShippingProofPod__c.field-meta.xml
<CustomField>
    <fullName>ShippingProofPod__c</fullName>
    <label>Comprovante envio POD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ainda não fiz envios para o Brasil</fullName>
            </value>
            <value>
                <fullName>Já faço envios para o Brasil</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>