force-app/main/default/objects/HomologationForm__c/fields/ShopifyDiscount__c.field-meta.xml
<CustomField>
    <fullName>ShopifyDiscount__c</fullName>
    <label>Desconto Shopify</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>