force-app/main/default/objects/HomologationForm__c/fields/SmsPackage__c.field-meta.xml
<CustomField>
    <fullName>SmsPackage__c</fullName>
    <label>SMS Package</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Packages</valueSetName>
    </valueSet>
</CustomField>