force-app/main/default/objects/HomologationForm__c/fields/Stone__c.field-meta.xml
<CustomField>
    <fullName>Stone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stone</label>
    <type>Checkbox</type>
</CustomField>