force-app/main/default/objects/HomologationForm__c/fields/TerminalId__c.field-meta.xml
<CustomField>
    <fullName>TerminalId__c</fullName>
    <label>Terminal ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>