force-app/main/default/objects/HomologationForm__c/fields/TransactionType__c.field-meta.xml
<CustomField>
    <fullName>TransactionType__c</fullName>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>Beneficiaries Only</fullName>
            </value>
            <value>
                <fullName>Establishments Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>