force-app/main/default/objects/HomologationForm__c/fields/URL_My_Shopify__c.field-meta.xml
<CustomField>
    <fullName>URL_My_Shopify__c</fullName>
    <label>URL My Shopify</label>
    <type>Url</type>
</CustomField>