force-app/main/default/objects/HomologationForm__c/fields/Verify_CPF_CNPJ__c.field-meta.xml
<CustomField>
    <fullName>Verify_CPF_CNPJ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verify CPF/CNPJ</label>
    <type>Checkbox</type>
</CustomField>